--- a/interface/package.json
+++ b/interface/package.json
@@ -2,7 +2,7 @@
   "name": "esp8266-react",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://192.168.1.14",
+  "proxy": "http://192.168.1.16",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.4",
     "async-validator": "^4.1.1",
     "axios": "^0.27.2",
+    "classcat": "^5.0.4",
     "dayjs": "^1.11.7",
     "http-proxy-middleware": "^2.0.1",
     "jwt-decode": "^3.1.2",
@@ -28,7 +29,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sockette": "^2.0.6",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "use-gauge": "^0.5.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
