--- a/platformio.ini
+++ b/platformio.ini
@@ -2,8 +2,8 @@
 extra_configs = 
   factory_settings.ini
   features.ini
-default_envs = esp12e
-;default_envs = node32s
+; default_envs = esp12e
+default_envs = node32s
 
 [env]
 build_flags=
@@ -20,11 +20,11 @@ build_flags=
 lib_compat_mode = strict
 
 ; Uncomment & modify the lines below in order to configure OTA updates
-;upload_flags = 
+; upload_flags = 
 ;  --port=8266 
 ;  --auth=esp-react
-;upload_port = 192.168.0.11  
-;upload_protocol = espota
+; upload_port = 192.168.0.11  
+; upload_protocol = espota
 
 framework = arduino
 monitor_speed = 115200
