Added default value support

--- a/factory_settings.ini
+++ b/factory_settings.ini
@@ -6,6 +6,9 @@
 
 [factory_settings]
 build_flags =
+  ;Pump start and stop points(Enter value from 0-40 PUMP_START_POINT < PUMP_STOP_POINT)
+  -D PUMP_START_POINT=10
+  -D PUMP_STOP_POINT=40
   ; WiFi settings
   -D FACTORY_WIFI_SSID=\"espwifi\"
   -D FACTORY_WIFI_PASSWORD=\"password1234\"
