--- a/interface/package.json
+++ b/interface/package.json
@@ -24,6 +24,7 @@
     "parse-ms": "^3.0.0",
     "react": "^18.1.0",
     "react-app-rewired": "^2.1.8",
+    "react-color": "^2.19.3",
     "react-dom": "^18.1.0",
     "react-dropzone": "^11.4.2",
     "react-router-dom": "^6.3.0",
@@ -89,5 +90,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-color": "^3.0.6"
   }
 }
