Changed ap settings

--- a/factory_settings.ini
+++ b/factory_settings.ini
@@ -6,18 +6,15 @@
 
 [factory_settings]
 build_flags =
-  ;Pump start and stop points(Enter value from 0-40 PUMP_START_POINT < PUMP_STOP_POINT)
-  -D PUMP_START_POINT=10
-  -D PUMP_STOP_POINT=40
   ; WiFi settings
-  -D FACTORY_WIFI_SSID=\"espwifi\"
-  -D FACTORY_WIFI_PASSWORD=\"password1234\"
-  -D FACTORY_WIFI_HOSTNAME=\"#{platform}-#{unique_id}\" ; supports placeholders
+  -D FACTORY_WIFI_SSID=\"Luci\"
+  -D FACTORY_WIFI_PASSWORD=\"12345678\"
+  -D FACTORY_WIFI_HOSTNAME=\"Water" "Tank\" 
 
   ; Access point settings
   -D FACTORY_AP_PROVISION_MODE=AP_MODE_DISCONNECTED
-  -D FACTORY_AP_SSID=\"ESP8266-React-#{unique_id}\" ; 1-64 characters, supports placeholders
-  -D FACTORY_AP_PASSWORD=\"esp-react\" ; 8-64 characters
+  -D FACTORY_AP_SSID=\"Water" "Tank\" ; 1-64 characters
+  -D FACTORY_AP_PASSWORD=\0 ; 8-64 characters
   -D FACTORY_AP_CHANNEL=1
   -D FACTORY_AP_SSID_HIDDEN=false
   -D FACTORY_AP_MAX_CLIENTS=4
@@ -33,12 +30,12 @@ build_flags =
 
   ; NTP settings
   -D FACTORY_NTP_ENABLED=true
-  -D FACTORY_NTP_TIME_ZONE_LABEL=\"Europe/London\"
-  -D FACTORY_NTP_TIME_ZONE_FORMAT=\"GMT0BST,M3.5.0/1,M10.5.0\"
+  -D FACTORY_NTP_TIME_ZONE_LABEL=\"Asia/Kolkata\"
+  -D FACTORY_NTP_TIME_ZONE_FORMAT=\"IST-5:30\"
   -D FACTORY_NTP_SERVER=\"time.google.com\"
 
   ; OTA settings
-  -D FACTORY_OTA_PORT=8266
+  -D FACTORY_OTA_PORT=3232
   -D FACTORY_OTA_PASSWORD=\"esp-react\"
   -D FACTORY_OTA_ENABLED=true
 
