--- a/interface/package.json
+++ b/interface/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "esp8266-react",
+  "name": "water-tank",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://192.168.1.15",
