--- a/interface/package.json
+++ b/interface/package.json
@@ -2,7 +2,7 @@
   "name": "water-tank",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://192.168.1.15",
+  "proxy": "http://192.168.1.14",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -24,11 +24,11 @@
     "parse-ms": "^3.0.0",
     "react": "^18.1.0",
     "react-app-rewired": "^2.1.8",
-    "react-color": "^2.19.3",
     "react-dom": "^18.1.0",
     "react-dropzone": "^11.4.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.8.0",
     "sockette": "^2.0.6",
     "typescript": "^4.6.4",
     "use-gauge": "^0.5.0"
